--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/core": "^11.0.0",
     "nuxt": "^3.12.4",
-    "vue": "latest"
+    "vue": "^3.4.38"
   }
 }
