Proxy kinda works, but not SSE

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@vueuse/core": "^11.0.0",
     "nuxt": "^3.12.4",
-    "vue": "^3.4.38"
+    "vue": "^3.4.38",
+    "vue-sse": "^2.5.2"
+
   }
 }
