--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
     "nuxt": "^3.12.4",
     "vue": "^3.4.38",
     "vue-sse": "^2.5.2"
-
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
